turtleart.housetree.HouseTree.scala.error
Erreur de compilation :
HouseTree:12: error: overloaded method value setX with alternatives:
  (x$1: Int)Unit <and>
  (x$1: Double)Unit
 cannot be applied to (Double, Double)
  setX(getX()+20,getY()) 
  ^